[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sprites/Backgrounds/MainBack.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Buttons/Bag_Buttons.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Highscore.png" type="Texture" id=3]
[ext_resource path="res://Fonts/pixel-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/UI Scripts/Main Menu/main_menu_bottom_ui.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI Scripts/Main Menu/Settings_Panel.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI Scripts/Main Menu/high_score_UI.gd" type="Script" id=7]
[ext_resource path="res://Scripts/UI Scripts/Main Menu/car_spawner.gd" type="Script" id=8]
[ext_resource path="res://Scenes/coin_UI.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 14, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 50, 40, 14, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 260, 14, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 50, 260, 14, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 180, 14, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 50, 180, 14, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 220, 14, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 50, 220, 14, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 14, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 50, 200, 14, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 14, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 50, 240, 14, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 20, 30, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 50, 20, 30, 21 )

[node name="MainMenu" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Top_UI" type="ReferenceRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High_Score" type="TextureRect" parent="Top_UI"]
anchor_left = 0.281
anchor_right = 0.281
margin_left = 61.079
margin_top = -15.1421
margin_right = 149.079
margin_bottom = 24.8579
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top_UI/High_Score"]
margin_left = 24.1264
margin_top = 19.9982
margin_right = 64.1264
margin_bottom = 34.9982
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.203922, 0.168627, 0.113725, 1 )
text = "000"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Top_UI"]
margin_left = 200.379
margin_top = -15.1421
margin_right = 214.379
margin_bottom = 4.85786
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
stretch_mode = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="ReferenceRect" parent="Top_UI"]
margin_left = 240.0
margin_top = 20.0
margin_right = 261.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits_button" type="TextureButton" parent="Top_UI/SettingsPanel"]
margin_right = 14.0
margin_bottom = 20.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_button" type="TextureButton" parent="Top_UI/SettingsPanel"]
margin_top = 40.0
margin_right = 14.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 6 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_button_off" type="TextureButton" parent="Top_UI/SettingsPanel"]
margin_top = 40.0
margin_right = 14.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_button" type="TextureButton" parent="Top_UI/SettingsPanel"]
margin_top = 80.9921
margin_right = 14.0
margin_bottom = 100.992
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 10 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_button_off" type="TextureButton" parent="Top_UI/SettingsPanel"]
margin_top = 80.9921
margin_right = 14.0
margin_bottom = 100.992
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = SubResource( 11 )
texture_pressed = SubResource( 12 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_UI" parent="Top_UI" instance=ExtResource( 9 )]
margin_left = -12.0
margin_top = -15.1421
margin_right = 28.0
margin_bottom = 24.8579
rect_scale = Vector2( 1.25, 1.25 )

[node name="Bottom_UI" type="ReferenceRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play Button" type="TextureButton" parent="Bottom_UI"]
margin_left = 29.0625
margin_top = 206.25
margin_right = 79.0625
margin_bottom = 226.25
texture_normal = SubResource( 13 )
texture_pressed = SubResource( 14 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collection Button" type="TextureButton" parent="Bottom_UI"]
margin_left = -6.0
margin_top = 206.25
margin_right = 24.0
margin_bottom = 226.25
texture_normal = SubResource( 15 )
texture_pressed = SubResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Car_Spawner" type="Node2D" parent="."]
position = Vector2( 78.125, 360 )
script = ExtResource( 8 )
[connection signal="pressed" from="Top_UI/Settings" to="Top_UI/Settings" method="_on_Settings_pressed"]
[connection signal="pressed" from="Top_UI/SettingsPanel/credits_button" to="Top_UI/Settings" method="_on_credits_button_pressed"]
[connection signal="pressed" from="Top_UI/SettingsPanel/music_button" to="Top_UI/Settings" method="_on_music_button_pressed"]
[connection signal="pressed" from="Top_UI/SettingsPanel/music_button_off" to="Top_UI/Settings" method="_on_music_button_pressed"]
[connection signal="pressed" from="Top_UI/SettingsPanel/sfx_button" to="Top_UI/Settings" method="_on_sfx_button_pressed"]
[connection signal="pressed" from="Top_UI/SettingsPanel/sfx_button_off" to="Top_UI/Settings" method="_on_sfx_button_pressed"]
[connection signal="pressed" from="Bottom_UI/Play Button" to="Bottom_UI" method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Bottom_UI/Collection Button" to="Bottom_UI" method="_on_Collection_Button_pressed"]
